fix(table): filter tag has wrong color on hover
3189

--- a/packages/react/src/components/Table/_table.scss
+++ b/packages/react/src/components/Table/_table.scss
@@ -101,8 +101,8 @@ html[dir='rtl'] {
   border-top: 1px solid $ui-03;
 
   .#{$prefix}--tag {
-    color: $interactive-01;
-    background-color: $carbon--blue-20;
+    color: $active-primary;
+    background-color: $highlight;
   }
 }
 
